[DDW-1124] Fix dropdown truncation

--- a/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
+++ b/source/renderer/app/components/staking/delegation-center/DelegationCenterBody.scss
@@ -1,7 +1,7 @@
 @import '../stakingConfig';
 
 .component {
-  margin: 20px;
+  margin: 20px 20px 45px;
 
   .bodyTitle {
     @extend %regularLightColorText;
